Fix Column patching and test cases